--- a/.pages.yml
+++ b/.pages.yml
@@ -2,12 +2,12 @@ media:
   input: public
   output: /
 content:
-  - name: posts
-    label: Posts
+  - name: lessons
+    label: Lessons
     type: collection
-    path: src/content/blog
+    path: src/content/lessons
     view:
-      fields: [ title, draft, date ]
+      fields: [title, draft, description, date]
     fields:
       - { name: author, label: Author, type: string }
       - { name: pubDatetime, label: Date, type: date }
@@ -15,16 +15,14 @@ content:
       - { name: title, label: Title, type: string, required: true }
       - { name: ogImage, label: Title, type: string }
       - { name: slug, label: Slug, type: string }
-      - { name: featured, label: Featured, type: boolean }
       - { name: draft, label: Draft, type: boolean }
-      - { name: tags, label: Tags, type: string, list: true }
       - { name: description, label: Description, type: string }
-      - { name: body, label: Body, type: rich-text }
-  - name: about
-    label: About page
-    type: file
-    path: src/pages/about.md
+  - name: topics
+    label: Topics
+    type: collection
+    path: src/content/topics
+    view:
+      fields: [title, draft, description, date]
     fields:
-      - { name: layout, type: string, hidden: true, default: "../layouts/AboutLayout.astro" }
-      - { name: title, label: Title, type: string }
-      - { name: body, label: Body, type: rich-text, options: { input: public/assets, output: /assets } }
+      - { name: title, label: Title, type: string, required: true }
+      - { name: body, label: Body, type: rich-text }
